# hneuron

./: .gitignore  LICENSE  README.md  TODO  hneuron.cabal
app/: Main.hs
src/: HNeuron.hs
