name:                hneuron
version:             0.1.0.0
synopsis:            Simple neural network library written in Haskell
description:         Please see README.md
homepage:            https://github.com/hator/hneuron#readme
license:             MIT
license-file:        LICENSE
author:              Jan Michalski
maintainer:          jan.michalski[at]buzytor.com
copyright:           2016 Jan Michalski
category:            AI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HNeuron
  build-depends:       base >= 4.7 && < 5
                     , matrix
                     , random
                     , MonadRandom
  default-language:    Haskell2010

executable hneuron-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hneuron
                     , MonadRandom
                     --FIXME
                     , matrix
  default-language:    Haskell2010

test-suite hneuron-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hneural
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hator/hneuron
